Enhance app configuration by adding expo-dev-client dependency, updating default task duration, and improving UI styles; introduce EAS configuration for build management.

--- a/app.json
+++ b/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.munchkin870411.atyourpace"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "becd33e0-2088-4fb8-9cd8-c5921dcde29d"
+      }
     }
   }
 }
